--- a/js/index.html
+++ b/js/index.html
@@ -6,11 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <script defer src="script.js"></script>
     <h1>Super</h1>
     <p>Hello world!</p>
+    <p>World of tank!</p>
     <!--<script>
         alert(1);
     </script>-->
-    <script src="script.js"></script>
+    
 </body>
 </html>
