--- a/js/lesson_38/Food/index.html
+++ b/js/lesson_38/Food/index.html
@@ -118,7 +118,7 @@
                     <div class="offer__slide">
                         <img src="img/slider/pepper.jpg" alt="pepper">
                     </div>
-                    <!-- <div class="offer__slide">
+                    <div class="offer__slide">
                         <img src="img/slider/food-12.jpg" alt="food">
                     </div>
                     <div class="offer__slide">
@@ -126,7 +126,7 @@
                     </div>
                     <div class="offer__slide">
                         <img src="img/slider/paprika.jpg" alt="paprika">
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
@@ -187,7 +187,7 @@
 
         <div class="menu__field">
             <div class="container">
-                <!-- Tutaj podstawiamy kontenerzy menu generowane za pomoca JS-->>
+                <!-- Tutaj podstawiamy kontenerzy menu generowane za pomoca JS-->
             </div>
         </div>
     </div>
@@ -273,7 +273,8 @@
             </div>
         </div>
     </div>
-
+    <!-- PAMIENTAC: CDN biblioteki zawsze wstawiac w projekt przed glownym skryptem, zeby on najpierw sie zaladowaw a tylko potem mozna bylo jego wykorzystac w glownym pliku script.js -->
+    <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script defer src="js/script.js"></script>
 </body>
 </html>
